force-app/main/default/objects/NOC__c/NOC__c.object-meta.xml
<CustomObject>
    <label>NOC</label>
    <nameField>
        <displayFormat>NOC-{00000}</displayFormat>
        <label>NOC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>