force-app/main/default/objects/NOC__c/fields/Mail_Body__c.field-meta.xml
<CustomField>
    <fullName>Mail_Body__c</fullName>
    <description>Predefined mail body for the NOC. Editable before send.</description>
    <label>Mail Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>