force-app/main/default/objects/NOC__c/fields/NOC_Type__c.field-meta.xml
<CustomField>
    <fullName>NOC_Type__c</fullName>
    <description>NOC variant. Capri NOC is the default Ananda Homes flavour referenced in BRD section 7 step 40.</description>
    <label>NOC Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capri NOC</fullName>
                <default>true</default>
                <label>Capri NOC</label>
            </value>
            <value>
                <fullName>Bank NOC</fullName>
            </value>
            <value>
                <fullName>Society NOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>