force-app/main/default/objects/NOC__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>NOCs</relationshipLabel>
    <relationshipName>NOCs</relationshipName>
    <type>Lookup</type>
</CustomField>